
==== Breaking

==== Added
* `Warn::UnlessFieldValueMatches` transform
* `multimode` parameter for `Utils::FieldValueMatcher`
* Support for passing Procs in as file registry entry values (or as a value in a :dest_special_opts Hash).
* `delim` parameter for `Replace::FieldValueWithStaticMapping` transform

==== Changed

==== Deleted

==== To be deprecated/Will break in a future version
* `multival` and `sep` parameters for `Replace::FieldValueWithStaticMapping` transform

== Releases
=== 2.9.0 - 2022-07-28
https://github.com/lyrasis/kiba-extend/compare/v2.8.0\...v2.9.0[Compare code changes]

==== Breaking
* Removes Hash `conditions` parameter and `sep` parameter from `Merge::ConstantValueConditional` transform, replacing with lambda Proc `condition` parameter. In https://github.com/lyrasis/kiba-extend/pull/88[PR#88]
* **Only relevant if you have called global `Kiba::Extend::DELIM` or `Kiba::Extend::CSVOPT` from outside Kiba::Extend for some reason.** These global constants were finally removed from the final few places they were being used within kiba-extend, and they have been removed from the application setup.

==== Added
* New service object classes in `Transforms::Helpers` in https://github.com/lyrasis/kiba-extend/pull/93[PR#93]:
** `DelimOnlyChecker`
** `FieldValueGetter`
** `RowFieldEvennessChecker`

* New transforms:
** `Clean::EvenFieldValues` (in https://github.com/lyrasis/kiba-extend/pull/93[PR#93])
** `Collapse::FieldsToRepeatableFieldGroup` (in https://github.com/lyrasis/kiba-extend/pull/93[PR#93])
** `Collapse::FieldsToTypedFieldPair` (in https://github.com/lyrasis/kiba-extend/pull/93[PR#93])
** `Collapse::FieldsWithCustomFieldmap` (in https://github.com/lyrasis/kiba-extend/pull/93[PR#93])
** `Deduplicate::FlagAll` (in https://github.com/lyrasis/kiba-extend/pull/93[PR#93])
** `Delete::DelimiterOnlyFieldValues` (in https://github.com/lyrasis/kiba-extend/pull/93[PR#93])